# GDGoC-Del4-Demo

./: .gitattributes  .gitignore  README.md  SETUP.md  STATUS.md  VECTOR_INTEGRATION.md  docker-compose.db.yml  drizzle.config.ts  mise.toml  next.config.ts  package-lock.json  package.json  server.mjs
.github/workflows/: review.yml
app/: globals.css  home-page-client.tsx  layout.tsx  page.tsx
app/discovery-ai/: discovery-ai-page-client.tsx  page.tsx
app/dm/: page.tsx
app/profile-ai/: page.tsx  profile-ai-page-client.tsx
app/settings/: actions.ts  page.tsx  settings-form.tsx
assets/models/: milfy_nayamu.glb.txt
components/: nav.tsx
components/3D/: 3DViewer.tsx
components/matching/: matching-ai-history-panel.tsx  matching-ai-latest-panel.tsx
components/profile/: profile-ai-history-panel.tsx  profile-ai-latest-panel.tsx
components/ui/: icon.tsx
hooks/: use-character-trigger.ts  use-matching-ai-chat.ts  use-profile-ai-chat.ts
lib/: auth.ts
scripts/: db-setup.ts  seed.ts  vectorize-all-bots.mjs
types/: next-auth.d.ts  validator.ts
vectoring-api/: Dockerfile  README.md  SETUP.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml  start.sh  test.sh
vectoring-api/backend/: main.py  requirements.txt
vectoring-api/backend/infrastructure/config/: logging_config.py  settings.py
vectoring-api/backend/infrastructure/database/: pool.py
vectoring-api/backend/infrastructure/ml/: e5_vectorizer_impl.py  vectorizer.py
vectoring-api/backend/presentation/api/v1/: health.py  matching.py  profile.py  vectorize.py  vectorize_full.py
(+61 files in other folders)
